# trader

./: .gitignore  Cargo.toml  README.md  trader.db  trader.db-shm  trader.db-wal
src/: main.rs  storage.rs
src/feed/: mod.rs
src/feed/binance/: mod.rs  wire.rs
src/feed/poly/: clob.rs  gamma.rs  mod.rs
src/market/: book.rs  mod.rs  parse.rs
src/tui/: mod.rs
src/tui/selector/: draw.rs  mod.rs
src/tui/viewer/: fmt.rs  mod.rs  pane.rs  poly.rs
