[package]
name         = "orderbook"
version      = "0.1.0"
edition      = "2021"
description  = "HFT-grade terminal order-book viewer for Binance + Polymarket"
license      = "MIT"

[[bin]]
name = "orderbook"
path = "src/main.rs"

# ── HFT-tuned release profile ────────────────────────────────────────────────
# fat LTO + single codegen unit + panic=abort trims ~30% off runtime latency
# on hot paths (book inserts, JSON parses) vs default release.
[profile.release]
opt-level        = 3
lto              = "fat"
codegen-units    = 1
panic            = "abort"
strip            = true
debug            = false
overflow-checks  = false

# build with: RUSTFLAGS="-C target-cpu=native" cargo build --release
# for max SIMD / AVX2 / AES-NI utilisation on this machine.

[dependencies]
# async runtime
tokio              = { version = "1.40",  features = ["full"] }
futures-util       = "0.3"

# websocket + http
tokio-tungstenite  = { version = "0.21",  features = ["rustls-tls-native-roots", "connect"] }
reqwest            = { version = "0.12",  default-features = false, features = ["rustls-tls", "json"] }

# JSON (SIMD-accelerated)
simd-json          = { version = "0.13",  features = ["serde_impl"] }
serde              = { version = "1",     features = ["derive"] }
serde_json         = "1"
rusqlite           = { version = "0.32", features = ["bundled"] }
axum               = "0.7"

# terminal UI
ratatui            = "0.29"
crossterm          = { version = "0.28",  features = ["event-stream"] }

# hot-path utils
parking_lot        = "0.12"
fast-float         = "0.2"
anyhow             = "1"
chrono             = { version = "0.4", default-features = false, features = ["clock"] }
